build to jdk17, fix test and update plugins